Modifications majeures du style de l'application

--- a/src/pages/finishers/finishers.html
+++ b/src/pages/finishers/finishers.html
@@ -5,7 +5,7 @@ See http://ionicframework.com/docs/v2/components/#navigation for more info on
 Ionic pages and navigation.
 -->
 <ion-header>
-  <ion-navbar color="secondary">
+  <ion-navbar color="danger">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
@@ -52,18 +52,18 @@ Ionic pages and navigation.
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar color="secondary">
+  <ion-toolbar color="danger">
     <ion-searchbar
-      mode="ios" color="secondary" (ionInput)="getItems($event)">
+      mode="ios" color="danger" (ionInput)="getItems($event)">
     </ion-searchbar>
     <ion-icon name="ios-arrow-up" item-right *ngIf="!isOpenChoice" (click)="displayCheckBox()"></ion-icon>
     <ion-icon name="ios-arrow-down" item-right *ngIf="isOpenChoice" (click)="displayCheckBox()"></ion-icon>
 
-    <ion-item color="secondary" *ngIf="isOpenChoice">
+    <ion-item color="danger" *ngIf="isOpenChoice">
       <ion-label>Non Permanent</ion-label>
       <ion-checkbox disabled="false"></ion-checkbox>
     </ion-item>
-    <ion-item color="secondary" *ngIf="isOpenChoice">
+    <ion-item color="danger" *ngIf="isOpenChoice">
       <ion-label>Permanent</ion-label>
       <ion-checkbox disabled="false"></ion-checkbox>
     </ion-item>
