--- a/src/pages/minis/minis.html
+++ b/src/pages/minis/minis.html
@@ -8,7 +8,7 @@
 
 
 
-  <ion-navbar color="secondary">
+  <ion-navbar color="danger">
 
       <!--  <ion-title>Mini-Pets   <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
         </ion-title> -->
@@ -46,7 +46,7 @@
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar color="secondary">
-    <ion-searchbar mode="ios" color="secondary" (ionInput)="getItems($event)"></ion-searchbar>
+  <ion-toolbar color="danger">
+    <ion-searchbar mode="ios" color="danger" (ionInput)="getItems($event)"></ion-searchbar>
   </ion-toolbar>
 </ion-footer>
