--- a/src/pages/my-wallet/my-wallet.html
+++ b/src/pages/my-wallet/my-wallet.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="secondary">
+  <ion-navbar color="danger">
 
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
