--- a/src/pages/page-account/page-account.html
+++ b/src/pages/page-account/page-account.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-navbar color="secondary">
+  <ion-navbar color="danger">
 
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
@@ -18,45 +18,43 @@
 
 <ion-content class="myBg">
 
-  <ion-item class="custom-class-divider">
-    <ion-item color="secondary" class="custom-class-divider" no-lines>
+  <ion-list>
+    <ion-item  color="danger" class="custom-class-divider">
       <ion-avatar item-left>
         <img src="assets/img/icon.png">
       </ion-avatar>
       <h2 class="title"><b>{{AccountName}}</b></h2>
     </ion-item>
 
-      <ion-item-group>
-        <ion-item class="custom-class-divider">
-          <ion-icon name = "" item-left large></ion-icon>
-          <h2> <b> Créé le :</b> {{AccountCreation}} </h2>
-        </ion-item>
+    <ion-item class="custom-class-divider">
+      <ion-icon name = "" item-left large></ion-icon>
+      <h2> <b> Créé le :</b> {{AccountCreation}} </h2>
+    </ion-item>
 
-        <ion-item class="custom-class-divider">
-          <ion-icon name = "" item-left large></ion-icon>
-          <h2> <b> Accès à : </b> {{hasExtension()}} </h2>
-        </ion-item>
+    <ion-item class="custom-class-divider">
+      <ion-icon name = "" item-left large></ion-icon>
+      <h2> <b> Accès à : </b> {{hasExtension()}} </h2>
+    </ion-item>
 
-        <ion-item class="custom-class-divider">
-          <ion-icon name = "" item-left large></ion-icon>
-          <h2> <b> Commandant :</b> {{isCommander()}} </h2>
-        </ion-item>
+    <ion-item class="custom-class-divider">
+      <ion-icon name = "" item-left large></ion-icon>
+      <h2> <b> Commandant :</b> {{isCommander()}} </h2>
+    </ion-item>
 
-        <ion-item class="custom-class-divider">
-          <ion-icon name = "" item-left large></ion-icon>
-          <h2> <b> Daily AP :</b> {{AccountDailyAP}} </h2>
-        </ion-item>
+    <ion-item class="custom-class-divider">
+      <ion-icon name = "" item-left large></ion-icon>
+      <h2> <b> Daily AP :</b> {{AccountDailyAP}} </h2>
+    </ion-item>
 
-        <ion-item class="custom-class-divider">
-          <ion-icon name = "" item-left large></ion-icon>
-          <h2> <b> Niveau de fractale :</b> {{AccountFractalLevel}} </h2>
-        </ion-item>
+    <ion-item class="custom-class-divider">
+      <ion-icon name = "" item-left large></ion-icon>
+      <h2> <b> Niveau de fractale :</b> {{AccountFractalLevel}} </h2>
+    </ion-item>
 
-        <ion-item class="custom-class-divider">
-          <ion-icon name = "" item-left large></ion-icon>
-          <h2> <b> Rang McM :</b> {{AccountWvWRank}} </h2>
-        </ion-item>
-      </ion-item-group>
+    <ion-item class="custom-class-divider">
+      <ion-icon name = "" item-left large></ion-icon>
+      <h2> <b> Rang McM :</b> {{AccountWvWRank}} </h2>
+    </ion-item>
+  </ion-list>
 
-  </ion-item>
 </ion-content>
