Ajout styles (again)

--- a/src/pages/page-account/page-account.html
+++ b/src/pages/page-account/page-account.html
@@ -23,31 +23,31 @@
     <ion-avatar item-left>
       <img src="assets/img/background.png">
     </ion-avatar>
-    <h2>{{AccountName}}</h2>
+    <h2>Mysto.3215</h2>
     </ion-item>
 
     <ion-item class="item-tuto" text-wrap lines>
-      <ion-icon color="danger" large item-left icon-right name='md-clock'></ion-icon>
+      <ion-icon color="primary" large item-left icon-right name='md-clock'></ion-icon>
       <p><b> Créé le :</b> {{AccountCreation}}</p>
     </ion-item>
     <ion-item class="item-tuto" text-wrap lines>
-      <ion-icon color="danger" large item-left icon-right name='md-add-circle'></ion-icon>
+      <ion-icon color="primary" large item-left icon-right name='md-add-circle'></ion-icon>
       <p><b>Accès à : </b> {{hasExtension()}}</p>
     </ion-item>
     <ion-item class="item-tuto" text-wrap lines>
-      <ion-icon color="danger" large item-left icon-right name='md-paw'></ion-icon>
+      <ion-icon color="primary" large item-left icon-right name='md-paw'></ion-icon>
       <p><b> Commandant :</b> {{isCommander()}}</p>
     </ion-item>
     <ion-item class="item-tuto" text-wrap lines>
-      <ion-icon color="danger" large item-left icon-right name='md-beer'></ion-icon>
+      <ion-icon color="primary" large item-left icon-right name='md-beer'></ion-icon>
       <p><b> Daily AP :</b> {{AccountDailyAP}}</p>
     </ion-item>
     <ion-item class="item-tuto" text-wrap lines>
-      <ion-icon color="danger" large item-left icon-right name='md-infinite'></ion-icon>
+      <ion-icon color="primary" large item-left icon-right name='md-infinite'></ion-icon>
       <p><b> Niveau de fractale :</b> {{AccountFractalLevel}}</p>
     </ion-item>
     <ion-item class="item-tuto" text-wrap lines>
-      <ion-icon color="danger" large item-left icon-right name='ios-jet-outline'></ion-icon>
+      <ion-icon color="primary" large item-left icon-right name='ios-jet-outline'></ion-icon>
       <p><b> Rang McM :</b> {{AccountWvWRank}}</p>
     </ion-item>
     <ion-item actions class="footer-tuto">
