--- a/src/pages/page-account/page-account.html
+++ b/src/pages/page-account/page-account.html
@@ -23,7 +23,7 @@
     <ion-avatar item-left>
       <img src="assets/img/background.png">
     </ion-avatar>
-    <h2>Mysto.3215</h2>
+    <h2>{{AccountName}}</h2>
     </ion-item>
 
     <ion-item class="item-tuto" text-wrap lines>
