--- a/src/pages/mes-guildes/mes-guildes.html
+++ b/src/pages/mes-guildes/mes-guildes.html
@@ -1,3 +1,3 @@
-<ion-tabs color="danger" selectedIndex="0" tabsPlacement="bottom">
+<ion-tabs color="red-lighten-2" selectedIndex="0" tabsPlacement="bottom">
     <ion-tab *ngFor="let guild of listGuilds" [tabTitle]="guild.name" [root]="guildRoot" [rootParams]="{guild : guild}" tabIcon="star"></ion-tab>
 </ion-tabs>
